Add BTupleMemberType